# dwg2ifc

./: .gitignore  .routine-status  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: build.yml  discord-notify.yml  release.yml
assets/fonts/: LICENSES.md
autocad-tools/: Koneikko.dwg  Kotelo.dwg  LAHH.dwg  README.md  _loader.lsp  co2-anturi.dwg  co2-sireeni.dwg  guid-tools.lsp  hataseispainike.dwg  hoyrystin-1.dwg  hoyrystin-2.dwg  hoyrystin-3.dwg  hoyrystin.lsp  huolto-pc.dwg  kaato.lsp  klhylly-brics.lsp  klhylly-levy-brics.dwg  klhylly-levy.dwg  klhylly-tikas-brics.dwg  klhylly-tikas.dwg  klhylly-tikaspp.dwg  klhylly.lsp  koneikko.lsp  kotelo.lsp  lauhdutin.dwg  lauhdutin.lsp  positio.dwg  positio.lsp  putkityokalu.lsp  reikavaraus.lsp  rk-jk10.dwg  saadinkeskus-ku.dwg  varusteet.lsp
docs/: ARCHITECTURE.md  BLOCK_ATTRIBS.md  CLAUDE_TASKS.md  DWG_MAGICAD_PREPROCESSING.md  RAVA_DRAINAGE_CODES.md  SPLIT_PLAN.md  coordinate-system.md  packaging-smoke.md  packaging.md  quality-gates.md  rava-classification.md  solibri-rules.md  task-map.md
docs/plans/: 2026-04-24-plan-a-core-cli-wall-pipeline.md  2026-04-28-plan-g-georeferenced-ifc.md  2026-04-28-plan-h-ifc43-rava.md  2026-05-12-varusteet-design.md
docs/references/: talo2000-hankenimikkeisto.txt  ytv-osa1-yleinen.txt  ytv-osa3-ark.txt  ytv-osa4-tate.txt
docs/routines/: next-task.md
docs/superpowers/plans/: 2026-04-24-plan-a-core-cli-wall-pipeline.md  2026-04-27-plan-b-full-element-set.md  2026-04-27-plan-c-ifcsystem-grouping.md  2026-04-27-plan-d-pyside6-gui.md  2026-04-27-plan-e-pyinstaller.md  2026-04-28-plan-f-solibri-verification.md  2026-04-28-plan-g-georeferenced-ifc.md  2026-04-28-plan-h-ifc43-rava.md  2026-05-13-multi-floor-merge.md  2026-05-14-profile-editor-improvements.md
docs/superpowers/specs/: 2026-04-24-dxf2ifc-design.md  2026-05-13-multi-floor-merge-design.md  2026-05-14-profile-editor-improvements-design.md  2026-05-25-hole-reservation-design.md
scripts/: build_exe.ps1  build_exe.sh  build_installer.ps1  clean_workspace.ps1
src/dwg2ifc/: __init__.py  __main__.py  _version.py  cli.py
src/dwg2ifc/core/: block_attribs.py  dwg_preconvert.py  dxf_reader.py  energy_specs.py  finnish_psets.py  geometry.py  ifc_merger.py  mapper.py  positio.py  preprocessing.py  quality.py  types.py  updater.py
src/dwg2ifc/core/ifc_writer/: __init__.py  builders.py  classification.py  mesh.py  orchestrator.py  skeleton.py  styling.py
src/dwg2ifc/gui/: __init__.py  __main__.py  about.py  app.py  convert_worker.py  file_panel.py  layer_table.py  main_window.py  preview_log.py  profile_editor.py  recent_files.py  rule_dialog.py  style.qss  theme.py  update_banner.py
src/dwg2ifc/profiles/: default_kylmalaite.toml  loader.py  schema.py  store.py
src/dwg2ifc/profiles/rava/: __init__.py  loader.py  talotekniikka_jarjestelma.json  talotekniikka_tuoteosa.json
src/dxf2ifc/: __init__.py  __main__.py  _version.py  cli.py
src/dxf2ifc/core/: __init__.py  dwg_preconvert.py  dxf_reader.py  energy_specs.py  finnish_psets.py  geometry.py  ifc_merger.py  ifc_writer.py  mapper.py  outliers.py  positio.py  preprocessing.py  proxy_preprocessing.py  quality.py  types.py  updater.py
src/dxf2ifc/core/ifc_writer/: __init__.py  builders.py  classification.py  mesh.py  orchestrator.py  skeleton.py  styling.py  transforms.py
src/dxf2ifc/gui/: __init__.py  __main__.py  about.py  app.py  convert_worker.py  crs_dialog.py  file_panel.py  layer_table.py  main_window.py  profile_editor.py  recent_files.py  rule_dialog.py  style.qss  theme.py  update_banner.py
src/dxf2ifc/profiles/: __init__.py  default_kylmalaite.toml  default_kylmalaite_talo2000.toml  default_kylmalaite_tate_only.toml  loader.py  schema.py  store.py
src/dxf2ifc/profiles/rava/: lvi_jarjestelma.json  lvi_tuoteosa.json  talotekniikka_jarjestelma.json  talotekniikka_tuoteosa.json
tests/: conftest.py  test_acis_extraction.py  test_block_attribs.py  test_bugfix4_furniture_polygon_placement.py  test_bugfix5_xref_prefix_layers.py  test_bugfix6_ark_layer_rules.py  test_bugfix8_tikashylly_line_geometry.py  test_build_scripts.py  test_cli.py  test_cli_multi_floor.py  test_discipline_classification.py  test_dwg_preconvert.py  test_dxf_reader.py  test_dxf_reader_insert_3dface.py  test_dxf_reader_polyface.py  test_dxf_reader_proxy.py  test_energy_specs.py  test_finnish_psets.py  test_font_assets.py  test_geometry.py  test_geometry_dimensions.py  test_geometry_roundtrip.py  test_gui_about.py  test_gui_app.py  test_gui_convert_worker.py  test_gui_crs_dialog.py  test_gui_file_panel.py  test_gui_integration.py  test_gui_layer_table.py  test_gui_main_module.py  test_gui_main_window_profile.py  test_gui_preview_log.py  test_gui_profile_editor.py  test_gui_recent_files.py  test_gui_rule_dialog.py  test_gui_smoke.py  test_gui_style.py  test_gui_theme.py  test_hole_reservation_builder.py  test_ifc_merger.py  (+48 more)
tests/fixtures/: simple_wall.dxf  solibri_reference_full.ifc  solibri_report_sample.xml
tests/snapshots/solibri/: full_kylmaelement.json
tools/rava/: __init__.py  sync_codes.py
tools/solibri/: __main__.py  build_bcfzip.py  build_reference_ifc.py  cli.py  diff_snapshot.py  dwg2ifc.bcfzip  dxf2ifc.bcfzip  parse_report.py  verify.py
