[project]
name = "dxf2ifc"
version = "0.1.0"
description = "AutoCAD DXF to IFC 4 converter for Finnish refrigeration design (Talo2000 classification)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lauri Rekola" }]
dependencies = [
    "ezdxf>=1.3.0",
    "ifcopenshell>=0.8.0",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
dxf2ifc = "dxf2ifc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dxf2ifc"]

[tool.hatch.build.targets.wheel.force-include]
"src/dxf2ifc/profiles/default_kylmalaite_talo2000.toml" = "dxf2ifc/profiles/default_kylmalaite_talo2000.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
