[project]
name = "dxf2ifc"
version = "0.2.0a2"
description = "AutoCAD DXF to IFC 4 converter for Finnish refrigeration design (RAVA3Pro classification)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lauri Rekola" }]
dependencies = [
    "ezdxf>=1.3.0",
    "ifcopenshell>=0.8.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.8.0",
    "tomli-w>=1.0.0",
    # Windows-only: drives the hidden-AutoCAD COM session for DWG-input
    # MagiCAD preconversion (core/dwg_preconvert.py). On non-Windows
    # hosts (CI Linux runners) the dwg_preconvert module no-ops; only
    # DXF input is supported there.
    "pywin32>=305; sys_platform=='win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.10",
    "pyyaml>=6.0",
    "ruff>=0.5.0",
]
gui = [
    "PySide6>=6.7.0",
]

[project.scripts]
dxf2ifc = "dxf2ifc.cli:main"
dxf2ifc-gui = "dxf2ifc.gui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dxf2ifc"]

[tool.hatch.build.targets.wheel.force-include]
"src/dxf2ifc/profiles/default_kylmalaite.toml" = "dxf2ifc/profiles/default_kylmalaite.toml"
"src/dxf2ifc/gui/style.qss" = "dxf2ifc/gui/style.qss"
"assets/dxf2ifc.ico" = "dxf2ifc/gui/dxf2ifc.ico"
"assets/dxf2ifc.png" = "dxf2ifc/gui/dxf2ifc.png"
"assets/fonts/Inter-Regular.ttf" = "dxf2ifc/gui/fonts/Inter-Regular.ttf"
"assets/fonts/Inter-Medium.ttf" = "dxf2ifc/gui/fonts/Inter-Medium.ttf"
"assets/fonts/Inter-SemiBold.ttf" = "dxf2ifc/gui/fonts/Inter-SemiBold.ttf"
"assets/fonts/Inter-Bold.ttf" = "dxf2ifc/gui/fonts/Inter-Bold.ttf"
"assets/fonts/SpaceGrotesk-Medium.ttf" = "dxf2ifc/gui/fonts/SpaceGrotesk-Medium.ttf"
"assets/fonts/SpaceGrotesk-Bold.ttf" = "dxf2ifc/gui/fonts/SpaceGrotesk-Bold.ttf"
"assets/fonts/JetBrainsMono-Medium.ttf" = "dxf2ifc/gui/fonts/JetBrainsMono-Medium.ttf"
"assets/fonts/LICENSES.md" = "dxf2ifc/gui/fonts/LICENSES.md"
"assets/fonts/Inter-LICENSE.txt" = "dxf2ifc/gui/fonts/Inter-LICENSE.txt"
"assets/fonts/SpaceGrotesk-LICENSE.txt" = "dxf2ifc/gui/fonts/SpaceGrotesk-LICENSE.txt"
"assets/fonts/JetBrainsMono-LICENSE.txt" = "dxf2ifc/gui/fonts/JetBrainsMono-LICENSE.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
markers = [
    "solibri: Plan F integration tests that require Solibri Anywhere on PATH; skipped automatically when Solibri.exe is not found.",
    "accoreconsole: tests that shell out to AutoCAD's headless accoreconsole.exe; skipped when not found under %ProgramFiles%\\Autodesk\\AutoCAD *.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
