[project]
name = "dwg2ifc"
version = "0.3.0a29"
description = "AutoCAD DWG/DXF to IFC 4 converter for Finnish refrigeration design (RAVA3Pro classification)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lauri Rekola" }]
dependencies = [
    "ezdxf>=1.3.0",
    "ifcopenshell>=0.8.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.8.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.10",
    "pyyaml>=6.0",
    "ruff>=0.5.0",
]
gui = [
    "PySide6>=6.7.0",
]

[project.scripts]
dwg2ifc = "dwg2ifc.cli:main"
dwg2ifc-gui = "dwg2ifc.gui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dwg2ifc"]

[tool.hatch.build.targets.wheel.force-include]
"src/dwg2ifc/profiles/default_kylmalaite.toml" = "dwg2ifc/profiles/default_kylmalaite.toml"
"src/dwg2ifc/gui/style.qss" = "dwg2ifc/gui/style.qss"
"assets/dwg2ifc.ico" = "dwg2ifc/gui/dwg2ifc.ico"
"assets/dwg2ifc.png" = "dwg2ifc/gui/dwg2ifc.png"
"assets/fonts/Inter-Regular.ttf" = "dwg2ifc/gui/fonts/Inter-Regular.ttf"
"assets/fonts/Inter-Medium.ttf" = "dwg2ifc/gui/fonts/Inter-Medium.ttf"
"assets/fonts/Inter-SemiBold.ttf" = "dwg2ifc/gui/fonts/Inter-SemiBold.ttf"
"assets/fonts/Inter-Bold.ttf" = "dwg2ifc/gui/fonts/Inter-Bold.ttf"
"assets/fonts/SpaceGrotesk-Medium.ttf" = "dwg2ifc/gui/fonts/SpaceGrotesk-Medium.ttf"
"assets/fonts/SpaceGrotesk-Bold.ttf" = "dwg2ifc/gui/fonts/SpaceGrotesk-Bold.ttf"
"assets/fonts/JetBrainsMono-Medium.ttf" = "dwg2ifc/gui/fonts/JetBrainsMono-Medium.ttf"
"assets/fonts/LICENSES.md" = "dwg2ifc/gui/fonts/LICENSES.md"
"assets/fonts/Inter-LICENSE.txt" = "dwg2ifc/gui/fonts/Inter-LICENSE.txt"
"assets/fonts/SpaceGrotesk-LICENSE.txt" = "dwg2ifc/gui/fonts/SpaceGrotesk-LICENSE.txt"
"assets/fonts/JetBrainsMono-LICENSE.txt" = "dwg2ifc/gui/fonts/JetBrainsMono-LICENSE.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
markers = [
    "solibri: Plan F integration tests that require Solibri Anywhere on PATH; skipped automatically when Solibri.exe is not found.",
    "accoreconsole: tests that shell out to AutoCAD's headless accoreconsole.exe; skipped when not found under %ProgramFiles%\\Autodesk\\AutoCAD *.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
